tokenizer.c
/* Generated by re2c 4.4 */
#line 1 "tokenizer.re"
// Compile with:
// re2c --no-generation-date -b tokenizer.re -o tokenizer.c

#include <stdbool.h>

#include "tokenizer.h"


#define RET(x) \
    *token_type=x; \
    *position = cur-string; \
    return;

void tokenizer_get_next_token(const unsigned char *string,
        uint64_t *position, TokenType *token_type)
{
    const unsigned char *cur = string + *position;
    while (true) {
        /*
        Re2c has excellent documentation at:

        https://re2c.org/manual/manual_c.html

        The first paragraph there explains the basics:

        * If multiple rules match, the longest match takes precedence
        * If multiple rules match the same string, the earlier rule takes
          precedence
        * Default rule `*` should always be defined, it has the lowest priority
          regardless of its place and matches any code unit
        * We use the "Sentinel character" method for end of input:
            * The end of the input text is denoted with a null character \x00
            * Thus the null character cannot be part of the input otherwise
            * There is one rule to match \x00 to end the parser
            * No other rule is allowed to match \x00, otherwise the re2c block
              would parse past the end of the string and segfaults
            * A special case of the previous point are negated character
              ranges, such as [^"\x00], where one must include \x00 in it to
              ensure this rule does not match \x00 (all other rules simply do
              not mention \x00)
            * See the "Handling the end of input" section in the re2c
              documentation for more info

        The re2c block interacts with the rest of the code via just one pointer
        variable `cur`. On entering the re2c block, the `cur` variable must
        point to the first character of the token to be tokenized by the block.
        The re2c block below then executes on its own until a rule is matched:
        the action in {} is then executed. In that action `cur` points to the
        first character of the next token.

        Before the re2c block we save the current `cur` into `tok`, so that we
        can use `tok` and `cur` in the action in {} to extract the token that
        corresponds to the rule that got matched:

        * `tok` points to the first character of the token
        * `cur-1` points to the last character of the token
        * `cur` points to the first character of the next token
        * `cur-tok` is the length of the token

        In the action, we do one of:

        * call `continue` which executes another cycle in the for loop (which
          will parse the next token); we use this to skip a token
        * call `return` which returns from this function; we return a token

        In both cases, `cur` points to first character of the next
        token, which becomes `tok` at the next iteration of the loop (either
        right away after `continue` or after the `lex` function is called again
        after `return`).

        See the manual for more details.
        */


        // These two variables are needed by the re2c block below internally,
        // initialization is not needed. One can think of them as local
        // variables of the re2c block.
        const unsigned char *mar, *ctxmar;
        
#line 83 "tokenizer.c"
{
	unsigned char yych;
	unsigned int yyaccept = 0;
	static const unsigned char yybm[256] = {
		  0, 192, 192, 192, 192, 192, 192, 192,
		192, 200,  64, 200, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		200, 192, 128, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 224, 192, 192,
		240, 240, 240, 240, 240, 240, 240, 240,
		240, 240, 192, 192, 192, 192, 192, 192,
		192, 224, 224, 224, 224, 224, 224, 224,
		224, 224, 224, 224, 224, 224, 224, 224,
		224, 224, 224, 224, 224, 224, 224, 224,
		224, 224, 224, 192, 192, 192, 192, 224,
		192, 224, 224, 224, 224, 224, 224, 224,
		224, 224, 224, 224, 224, 224, 224, 224,
		224, 224, 224, 224, 224, 224, 224, 224,
		224, 224, 224, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192
	};
	yych = *cur;
	if (yybm[0+yych] & 8) goto yy4;
	switch (yych) {
		case 0x00: goto yy1;
		case '\t':
		case '\n': goto yy5;
		case '\r': goto yy6;
		case ' ':
		case '!': goto yy7;
		case '"': goto yy8;
		case '#': goto yy9;
		case '$': goto yy10;
		case '%': goto yy11;
		case '(': goto yy13;
		case ')': goto yy14;
		case '*': goto yy15;
		case '+': goto yy16;
		case ',': goto yy17;
		case '-': goto yy18;
		case '.': goto yy20;
		case '/': goto yy22;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy23;
		case ':': goto yy25;
		case ';': goto yy26;
		case '<': goto yy27;
		case '=': goto yy28;
		case '>': goto yy29;
		case '@': goto yy30;
		case 'A':
		case 'a': goto yy32;
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'x':
		case 'y':
		case 'z': goto yy34;
		case 'W':
		case 'w': goto yy36;
		case '[': goto yy37;
		case ']': goto yy38;
		case '^': goto yy39;
		case '{': goto yy40;
		case '|': goto yy42;
		case '}': goto yy43;
		default: goto yy2;
	}
yy1:
	++cur;
#line 103 "tokenizer.re"
	{ RET(TK_EOF) }
#line 223 "tokenizer.c"
yy2:
	++cur;
yy3:
#line 102 "tokenizer.re"
	{ RET(TK_ERROR) }
#line 229 "tokenizer.c"
yy4:
	yych = *++cur;
	if (yybm[0+yych] & 8) goto yy4;
#line 104 "tokenizer.re"
	{ RET(TK_WHITESPACE) }
#line 235 "tokenizer.c"
yy5:
	++cur;
#line 105 "tokenizer.re"
	{ RET(TK_NEWLINE) }
#line 240 "tokenizer.c"
yy6:
	yych = *++cur;
	if (yych == '\n') goto yy5;
	goto yy3;
yy7:
	++cur;
#line 123 "tokenizer.re"
	{ RET(TK_EXCLAMATION) }
#line 249 "tokenizer.c"
yy8:
	yyaccept = 0;
	yych = *(mar = ++cur);
	if (yych <= 0x00) goto yy3;
	goto yy45;
yy9:
	yych = *++cur;
	if (yych <= '@') {
		if (yych <= '-') {
			if (yych <= ',') goto yy3;
			goto yy48;
		} else {
			if (yych <= '/') goto yy3;
			if (yych <= '9') goto yy50;
			goto yy3;
		}
	} else {
		if (yych <= '_') {
			if (yych <= 'Z') goto yy48;
			if (yych <= '^') goto yy3;
			goto yy48;
		} else {
			if (yych <= '`') goto yy3;
			if (yych <= 'z') goto yy48;
			goto yy3;
		}
	}
yy10:
	++cur;
#line 124 "tokenizer.re"
	{ RET(TK_DOLLAR) }
#line 281 "tokenizer.c"
yy11:
	yych = *++cur;
	if (yych <= '@') {
		if (yych <= '-') {
			if (yych >= '-') goto yy52;
		} else {
			if (yych <= '/') goto yy12;
			if (yych <= '9') goto yy54;
		}
	} else {
		if (yych <= '_') {
			if (yych <= 'Z') goto yy52;
			if (yych >= '_') goto yy52;
		} else {
			if (yych <= '`') goto yy12;
			if (yych <= 'z') goto yy52;
		}
	}
yy12:
#line 131 "tokenizer.re"
	{ RET(TK_PERCENT) }
#line 303 "tokenizer.c"
yy13:
	yych = *++cur;
	if (yych == '{') goto yy55;
#line 113 "tokenizer.re"
	{ RET(TK_LPAREN) }
#line 309 "tokenizer.c"
yy14:
	++cur;
#line 115 "tokenizer.re"
	{ RET(TK_RPAREN) }
#line 314 "tokenizer.c"
yy15:
	++cur;
#line 133 "tokenizer.re"
	{ RET(TK_STAR) }
#line 319 "tokenizer.c"
yy16:
	++cur;
#line 125 "tokenizer.re"
	{ RET(TK_PLUS) }
#line 324 "tokenizer.c"
yy17:
	++cur;
#line 132 "tokenizer.re"
	{ RET(TK_COMMA) }
#line 329 "tokenizer.c"
yy18:
	yyaccept = 1;
	yych = *(mar = ++cur);
	if (yych <= '>') {
		if (yych <= '/') {
			if (yych <= ',') goto yy19;
			if (yych <= '.') goto yy35;
		} else {
			if (yych <= '9') goto yy35;
			if (yych >= '>') goto yy57;
		}
	} else {
		if (yych <= '^') {
			if (yych <= '@') goto yy19;
			if (yych <= 'Z') goto yy35;
		} else {
			if (yych == '`') goto yy19;
			if (yych <= 'z') goto yy35;
		}
	}
yy19:
#line 126 "tokenizer.re"
	{ RET(TK_MINUS) }
#line 353 "tokenizer.c"
yy20:
	yych = *++cur;
	if (yych <= '/') goto yy21;
	if (yych <= '9') goto yy58;
yy21:
#line 136 "tokenizer.re"
	{ RET(TK_DOT) }
#line 361 "tokenizer.c"
yy22:
	yych = *++cur;
	if (yych == '/') goto yy60;
#line 130 "tokenizer.re"
	{ RET(TK_SLASH) }
#line 367 "tokenizer.c"
yy23:
	yyaccept = 2;
	yych = *(mar = ++cur);
	if (yybm[0+yych] & 16) goto yy23;
	if (yych <= 'E') {
		if (yych == '.') goto yy58;
		if (yych >= 'D') goto yy61;
	} else {
		if (yych <= 'e') {
			if (yych >= 'd') goto yy61;
		} else {
			if (yych == 'x') goto yy62;
		}
	}
yy24:
#line 151 "tokenizer.re"
	{ RET(TK_INTEGER) }
#line 385 "tokenizer.c"
yy25:
	++cur;
#line 128 "tokenizer.re"
	{ RET(TK_COLON) }
#line 390 "tokenizer.c"
yy26:
	++cur;
#line 129 "tokenizer.re"
	{ RET(TK_SEMICOLON) }
#line 395 "tokenizer.c"
yy27:
	++cur;
#line 121 "tokenizer.re"
	{ RET(TK_LANGLE) }
#line 400 "tokenizer.c"
yy28:
	++cur;
#line 127 "tokenizer.re"
	{ RET(TK_EQUAL) }
#line 405 "tokenizer.c"
yy29:
	++cur;
#line 122 "tokenizer.re"
	{ RET(TK_RANGLE) }
#line 410 "tokenizer.c"
yy30:
	yych = *++cur;
	if (yych <= 'Z') {
		if (yych == '-') goto yy64;
		if (yych >= 'A') goto yy64;
	} else {
		if (yych <= '_') {
			if (yych >= '_') goto yy64;
		} else {
			if (yych <= '`') goto yy31;
			if (yych <= 'z') goto yy64;
		}
	}
yy31:
#line 135 "tokenizer.re"
	{ RET(TK_AT) }
#line 427 "tokenizer.c"
yy32:
	yyaccept = 3;
	yych = *(mar = ++cur);
	if (yych <= 'L') {
		if (yych == 'B') goto yy66;
		if (yych <= 'K') goto yy35;
		goto yy67;
	} else {
		if (yych <= 'b') {
			if (yych <= 'a') goto yy35;
			goto yy66;
		} else {
			if (yych == 'l') goto yy67;
			goto yy35;
		}
	}
yy33:
#line 147 "tokenizer.re"
	{ RET(TK_NAME) }
#line 447 "tokenizer.c"
yy34:
	yyaccept = 3;
	yych = *(mar = ++cur);
yy35:
	if (yybm[0+yych] & 32) goto yy34;
	if (yych <= ',') goto yy33;
	if (yych <= '.') goto yy56;
	goto yy33;
yy36:
	yyaccept = 3;
	yych = *(mar = ++cur);
	if (yych == 'R') goto yy68;
	if (yych == 'r') goto yy68;
	goto yy35;
yy37:
	++cur;
#line 116 "tokenizer.re"
	{ RET(TK_LBRACKET) }
#line 466 "tokenizer.c"
yy38:
	++cur;
#line 117 "tokenizer.re"
	{ RET(TK_RBRACKET) }
#line 471 "tokenizer.c"
yy39:
	yych = *++cur;
	if (yych <= 'Z') {
		if (yych == '-') goto yy69;
		if (yych <= '@') goto yy3;
		goto yy69;
	} else {
		if (yych <= '_') {
			if (yych <= '^') goto yy3;
			goto yy69;
		} else {
			if (yych <= '`') goto yy3;
			if (yych <= 'z') goto yy69;
			goto yy3;
		}
	}
yy40:
	yyaccept = 4;
	yych = *(mar = ++cur);
	if (yych == '\n') {
		ctxmar = cur;
		goto yy71;
	}
	if (yych == '\r') {
		ctxmar = cur;
		goto yy72;
	}
yy41:
#line 118 "tokenizer.re"
	{ RET(TK_LBRACE) }
#line 502 "tokenizer.c"
yy42:
	++cur;
#line 134 "tokenizer.re"
	{ RET(TK_VBAR) }
#line 507 "tokenizer.c"
yy43:
	++cur;
#line 120 "tokenizer.re"
	{ RET(TK_RBRACE) }
#line 512 "tokenizer.c"
yy44:
	yych = *++cur;
yy45:
	if (yybm[0+yych] & 64) goto yy44;
	if (yych >= 0x01) goto yy47;
yy46:
	cur = mar;
	if (yyaccept <= 4) {
		if (yyaccept <= 2) {
			if (yyaccept <= 1) {
				if (yyaccept == 0) goto yy3;
				else goto yy19;
			} else {
				goto yy24;
			}
		} else {
			if (yyaccept == 3) goto yy33;
			else goto yy41;
		}
	} else {
		if (yyaccept <= 7) {
			if (yyaccept <= 6) {
				if (yyaccept == 5) goto yy59;
				else goto yy63;
			} else {
				goto yy81;
			}
		} else {
			if (yyaccept == 8) goto yy87;
			else goto yy91;
		}
	}
yy47:
	++cur;
#line 154 "tokenizer.re"
	{ RET(TK_STRING) }
#line 549 "tokenizer.c"
yy48:
	yych = *++cur;
	if (yych <= '@') {
		if (yych <= '-') {
			if (yych >= '-') goto yy48;
		} else {
			if (yych <= '/') goto yy49;
			if (yych <= '9') goto yy48;
		}
	} else {
		if (yych <= '_') {
			if (yych <= 'Z') goto yy48;
			if (yych >= '_') goto yy48;
		} else {
			if (yych <= '`') goto yy49;
			if (yych <= 'z') goto yy48;
		}
	}
yy49:
#line 142 "tokenizer.re"
	{ RET(TK_HASH_NAME); }
#line 571 "tokenizer.c"
yy50:
	yych = *++cur;
	if (yych <= '/') goto yy51;
	if (yych <= '9') goto yy50;
yy51:
#line 144 "tokenizer.re"
	{ RET(TK_HASH_NAME); }
#line 579 "tokenizer.c"
yy52:
	yych = *++cur;
	if (yych <= '@') {
		if (yych <= '-') {
			if (yych >= '-') goto yy52;
		} else {
			if (yych <= '/') goto yy53;
			if (yych <= '9') goto yy52;
		}
	} else {
		if (yych <= '_') {
			if (yych <= 'Z') goto yy52;
			if (yych >= '_') goto yy52;
		} else {
			if (yych <= '`') goto yy53;
			if (yych <= 'z') goto yy52;
		}
	}
yy53:
#line 149 "tokenizer.re"
	{ RET(TK_REGISTER) }
#line 601 "tokenizer.c"
yy54:
	yych = *++cur;
	if (yych <= '/') goto yy53;
	if (yych <= '9') goto yy54;
	goto yy53;
yy55:
	++cur;
	cur -= 1;
#line 114 "tokenizer.re"
	{ RET(TK_LPAREN_BRACE) }
#line 612 "tokenizer.c"
yy56:
	yych = *++cur;
	if (yych <= 'Z') {
		if (yych == '-') goto yy73;
		if (yych <= '@') goto yy46;
		goto yy73;
	} else {
		if (yych <= '_') {
			if (yych <= '^') goto yy46;
			goto yy73;
		} else {
			if (yych <= '`') goto yy46;
			if (yych <= 'z') goto yy73;
			goto yy46;
		}
	}
yy57:
	++cur;
#line 140 "tokenizer.re"
	{ RET(TK_ARROW) }
#line 633 "tokenizer.c"
yy58:
	yyaccept = 5;
	yych = *(mar = ++cur);
	if (yych <= 'C') {
		if (yych <= '/') goto yy59;
		if (yych <= '9') goto yy58;
	} else {
		if (yych <= 'E') goto yy61;
		if (yych <= 'c') goto yy59;
		if (yych <= 'e') goto yy61;
	}
yy59:
#line 153 "tokenizer.re"
	{ RET(TK_REAL) }
#line 648 "tokenizer.c"
yy60:
	yych = *++cur;
	if (yybm[0+yych] & 128) goto yy60;
#line 139 "tokenizer.re"
	{ RET(TK_COMMENT) }
#line 654 "tokenizer.c"
yy61:
	yych = *++cur;
	if (yych <= ',') {
		if (yych == '+') goto yy75;
		goto yy46;
	} else {
		if (yych <= '-') goto yy75;
		if (yych <= '/') goto yy46;
		if (yych <= '9') goto yy76;
		goto yy46;
	}
yy62:
	yyaccept = 6;
	yych = *(mar = ++cur);
	if (yych <= '/') goto yy63;
	if (yych <= '9') goto yy77;
	if (yych == '?') goto yy78;
yy63:
#line 152 "tokenizer.re"
	{ RET(TK_TYPE_DIM) }
#line 675 "tokenizer.c"
yy64:
	yych = *++cur;
	if (yych <= '@') {
		if (yych <= '-') {
			if (yych >= '-') goto yy64;
		} else {
			if (yych <= '/') goto yy65;
			if (yych <= '9') goto yy64;
		}
	} else {
		if (yych <= '_') {
			if (yych <= 'Z') goto yy64;
			if (yych >= '_') goto yy64;
		} else {
			if (yych <= '`') goto yy65;
			if (yych <= 'z') goto yy64;
		}
	}
yy65:
#line 150 "tokenizer.re"
	{ RET(TK_FUNCTION_NAME) }
#line 697 "tokenizer.c"
yy66:
	yyaccept = 3;
	yych = *(mar = ++cur);
	if (yych == 'S') goto yy79;
	if (yych == 's') goto yy79;
	goto yy35;
yy67:
	yyaccept = 3;
	yych = *(mar = ++cur);
	if (yych == 'L') goto yy80;
	if (yych == 'l') goto yy80;
	goto yy35;
yy68:
	yyaccept = 3;
	yych = *(mar = ++cur);
	if (yych == 'I') goto yy82;
	if (yych == 'i') goto yy82;
	goto yy35;
yy69:
	yych = *++cur;
	if (yych <= '@') {
		if (yych <= '-') {
			if (yych >= '-') goto yy69;
		} else {
			if (yych <= '/') goto yy70;
			if (yych <= '9') goto yy69;
		}
	} else {
		if (yych <= '_') {
			if (yych <= 'Z') goto yy69;
			if (yych >= '_') goto yy69;
		} else {
			if (yych <= '`') goto yy70;
			if (yych <= 'z') goto yy69;
		}
	}
yy70:
#line 145 "tokenizer.re"
	{ RET(TK_CARET_NAME); }
#line 737 "tokenizer.c"
yy71:
	++cur;
	cur = ctxmar;
#line 119 "tokenizer.re"
	{ RET(TK_LBRACE_END) }
#line 743 "tokenizer.c"
yy72:
	yych = *++cur;
	if (yych == '\n') goto yy71;
	goto yy46;
yy73:
	yych = *++cur;
	if (yych <= '@') {
		if (yych <= '-') {
			if (yych >= '-') goto yy73;
		} else {
			if (yych <= '/') goto yy74;
			if (yych <= '9') goto yy73;
		}
	} else {
		if (yych <= '_') {
			if (yych <= 'Z') goto yy73;
			if (yych >= '_') goto yy73;
		} else {
			if (yych <= '`') goto yy74;
			if (yych <= 'z') goto yy73;
		}
	}
yy74:
#line 148 "tokenizer.re"
	{ RET(TK_NAME_DOT_NAME) }
#line 769 "tokenizer.c"
yy75:
	yych = *++cur;
	if (yych <= '/') goto yy46;
	if (yych >= ':') goto yy46;
yy76:
	yych = *++cur;
	if (yych <= '/') goto yy59;
	if (yych <= '9') goto yy76;
	goto yy59;
yy77:
	yych = *++cur;
	if (yych <= '/') goto yy46;
	if (yych <= '9') goto yy77;
	if (yych == 'x') goto yy62;
	goto yy46;
yy78:
	yych = *++cur;
	if (yych == 'x') goto yy62;
	goto yy46;
yy79:
	yyaccept = 3;
	yych = *(mar = ++cur);
	if (yych == 'T') goto yy83;
	if (yych == 't') goto yy83;
	goto yy35;
yy80:
	yyaccept = 7;
	yych = *(mar = ++cur);
	if (yych <= '@') {
		if (yych <= '.') {
			if (yych >= '-') goto yy35;
		} else {
			if (yych <= '/') goto yy81;
			if (yych <= '9') goto yy35;
		}
	} else {
		if (yych <= '_') {
			if (yych <= 'Z') goto yy35;
			if (yych >= '_') goto yy35;
		} else {
			if (yych <= '`') goto yy81;
			if (yych <= 'z') goto yy35;
		}
	}
yy81:
#line 109 "tokenizer.re"
	{ RET(KW_ALL) }
#line 817 "tokenizer.c"
yy82:
	yyaccept = 3;
	yych = *(mar = ++cur);
	if (yych == 'T') goto yy84;
	if (yych == 't') goto yy84;
	goto yy35;
yy83:
	yyaccept = 3;
	yych = *(mar = ++cur);
	if (yych == 'R') goto yy85;
	if (yych == 'r') goto yy85;
	goto yy35;
yy84:
	yyaccept = 3;
	yych = *(mar = ++cur);
	if (yych == 'E') goto yy86;
	if (yych == 'e') goto yy86;
	goto yy35;
yy85:
	yyaccept = 3;
	yych = *(mar = ++cur);
	if (yych == 'A') goto yy88;
	if (yych == 'a') goto yy88;
	goto yy35;
yy86:
	yyaccept = 8;
	yych = *(mar = ++cur);
	if (yych <= '@') {
		if (yych <= '.') {
			if (yych >= '-') goto yy35;
		} else {
			if (yych <= '/') goto yy87;
			if (yych <= '9') goto yy35;
		}
	} else {
		if (yych <= '_') {
			if (yych <= 'Z') goto yy35;
			if (yych >= '_') goto yy35;
		} else {
			if (yych <= '`') goto yy87;
			if (yych <= 'z') goto yy35;
		}
	}
yy87:
#line 110 "tokenizer.re"
	{ RET(KW_WRITE) }
#line 864 "tokenizer.c"
yy88:
	yyaccept = 3;
	yych = *(mar = ++cur);
	if (yych == 'C') goto yy89;
	if (yych != 'c') goto yy35;
yy89:
	yyaccept = 3;
	yych = *(mar = ++cur);
	if (yych == 'T') goto yy90;
	if (yych != 't') goto yy35;
yy90:
	yyaccept = 9;
	yych = *(mar = ++cur);
	if (yych <= '@') {
		if (yych <= '.') {
			if (yych >= '-') goto yy35;
		} else {
			if (yych <= '/') goto yy91;
			if (yych <= '9') goto yy35;
		}
	} else {
		if (yych <= '_') {
			if (yych <= 'Z') goto yy35;
			if (yych >= '_') goto yy35;
		} else {
			if (yych <= '`') goto yy91;
			if (yych <= 'z') goto yy35;
		}
	}
yy91:
#line 108 "tokenizer.re"
	{ RET(KW_ABSTRACT) }
#line 897 "tokenizer.c"
}
#line 155 "tokenizer.re"

    }
}
